Root page with login/registration forms

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,16 +37,16 @@ application.session.cookie=SESSION
 # application.log.system.out=off
 
 # Database configuration
-# db.url=mysql://user:pwd@host/database
-# db.driver=org.postgresql.Driver
-# db.user=root
-# db.pass=secret
+db.url=mysql://root:root@127.0.0.1:3306/atrisk
+# db.driver=com.mysql.jdbc.Driver
+db.user=root
+db.pass=root
 # db.pool.timeout=1000
 # db.pool.maxSize=30
 # db.pool.minSize=10
 
 # JPA Configuration (Hibernate)
-# jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+jpa.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 jpa.ddl=none
 %dev.jpa.ddl=update
 # jpa.debugSQL=true
