Fully-functional asset identification

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,7 @@ application.session.cookie=SESSION
 # application.log.system.out=off
 
 # Database configuration
-db.url=jdbc:mysql://localhost:3306/atrisk
+db.url=jdbc:mysql://localhost:3306/atrisk?useUnicode=true&characterEncoding=UTF8
 db.driver=com.mysql.jdbc.Driver
 db.user=root
 db.pass=root
@@ -101,6 +101,6 @@ application.baseUrl=http://atriskhq.com/
 # playapps.net configuration
 %playapps.application.mode=prod
 %playapps.application.log=INFO
-%playapps.db=mysql:play:play@play
+%playapps.db=mysql:play:play@play?useUnicode=true&characterEncoding=UTF-8
 %playapps.http.port=9000
-# %playapps.jpa.ddl=update
+%playapps.jpa.ddl=update
