Bing Translate API integration (JavaScript → Java), huge JPA mappings refinement, a bit of icon suggestions for assets

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -104,3 +104,6 @@ application.baseUrl=http://atriskhq.com/
 %playapps.db=mysql:play:play@play?useUnicode=true&characterEncoding=UTF-8
 %playapps.http.port=9000
 %playapps.jpa.ddl=update
+
+external.bing.api-key=8D73E60108A835729D94BEC43450E80233859F44
+external.fugue.path=http://p.yusukekamiyamane.com/icons/search/fugue/icons/
