Fully-functional icon suggestions for assets

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,7 +50,7 @@ db.pass=root
 jpa.dialect=org.hibernate.dialect.MySQLDialect
 jpa.ddl=none
 %dev.jpa.ddl=update
-%dev.jpa.debugSQL=true
+#%dev.jpa.debugSQL=true
 # hibernate.use_sql_comments=true
 
 # Store path for Blob content
